# agentic-coding-tutorials

./: README.md
claude-code/cli-generator/: Claude-Code-Tutorial-2.md  README.md  pyproject.toml  tutorial.html
claude-code/cli-generator/.claude/: settings.json
claude-code/cli-generator/.claude/agents/: code-generator.md  code-reviewer.md  spec-designer.md  test-writer.md
claude-code/cli-generator/.claude/commands/: add-command.md  create-cli.md  design.md  generate.md  implement.md  new-cli.md  refine.md  save-spec.md  test.md
claude-code/cli-generator/.claude/hooks/: post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
claude-code/cli-generator/.claude/skills/advising-test-coverage/: SKILL.md
claude-code/cli-generator/.claude/skills/cli-generator-workflow/: SKILL.md
claude-code/cli-generator/.claude/skills/enforcing-code-style/: SKILL.md
claude-code/cli-generator/.claude/skills/python-fastapi-uv/: SKILL.md
claude-code/cli-generator/.claude/skills/systematic-debugging/: SKILL.md
claude-code/cli-generator/.claude/skills/writing-skills/: SKILL.md
claude-code/cli-generator/specs/: passgen.json
